feat: initial commit
Order validation and pricing
Some decent status output
:pizza:

Signed-off-by: rudoi <andrewrudoi@gmail.com>

--- a/config/samples/alpha_v1_pizzaorder.yaml
+++ b/config/samples/alpha_v1_pizzaorder.yaml
@@ -1,7 +1,27 @@
 apiVersion: alpha.rudeboy.io/v1
 kind: PizzaOrder
 metadata:
-  name: pizzaorder-sample
+  name: large-sausage-pineapple
 spec:
-  # Add fields here
-  foo: bar
+  placeOrder: true
+  customer:
+    firstName: Joe
+    lastName: Customer
+    email: HAHA
+  address:
+    street: NOT
+    city: TODAY
+    region: YOU
+    postalCode: SILLY
+    phone: HAXORS
+  pizzas:
+    - size: large
+      toppings:
+        - sausage
+        - pineapple
+    - size: large
+      toppings:
+        - mushroom
+        - spinach
+  paymentSecret:
+    name: payment-secret
